--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -34,8 +34,8 @@ package/unique_name="com.junsheng.test"
 package/name=""
 package/signed=true
 launcher_icons/main_192x192=""
-launcher_icons/adaptive_foreground_432x432=""
-launcher_icons/adaptive_background_432x432=""
+launcher_icons/adaptive_foreground_432x432="res://Assets/Fishing Scene/Fishes/seaurchin/sea_urchin_right.PNG"
+launcher_icons/adaptive_background_432x432="res://Assets/Placeholder/white_pixel.png"
 graphics/32_bits_framebuffer=true
 graphics/opengl_debug=false
 xr_features/xr_mode=0
